==> elpusk006/third.project.dukpt/CycloneTCP_SSL_Crypto_Open_1_5_0/cyclone_tcp/drivers/lpc176x_eth.c <==
#define TRACE_LEVEL NIC_TRACE_LEVEL
#include "lpc17xx.h"
#include "core/tcp_ip_stack.h"
#include "drivers/lpc176x_eth.h"
#include "debug.h"

error_t lpc176xEthInit(NetInterface *interface)
{
   error_t error;

   //Debug message
   TRACE_INFO("Initializing LPC176x Ethernet MAC...\r\n");

   //Power up EMAC controller
   LPC_SC->PCONP |= PCONP_PCENET;

   //GPIO configuration
   lpc176xEthInitGpio(interface);

   //Reset host registers, transmit datapath and receive datapath
   LPC_EMAC->Command = COMMAND_RX_RESET | COMMAND_TX_RESET | COMMAND_REG_RESET;

   //Reset EMAC controller
   LPC_EMAC->MAC1 = MAC1_SOFT_RESET | MAC1_SIMULATION_RESET |
      MAC1_RESET_MCS_RX | MAC1_RESET_RX | MAC1_RESET_MCS_TX | MAC1_RESET_TX;

   //Initialize MAC related registers
   LPC_EMAC->MAC1 = 0;
   LPC_EMAC->MAC2 = MAC2_PAD_CRC_ENABLE | MAC2_CRC_ENABLE;
   LPC_EMAC->IPGR = IPGR_DEFAULT_VALUE;
   LPC_EMAC->CLRT = CLRT_DEFAULT_VALUE;

   //Select RMII mode
   LPC_EMAC->Command = COMMAND_RMII;

   //Configure MDC clock
   LPC_EMAC->MCFG = MCFG_CLOCK_SELECT_DIV44;
   //Reset MII management interface
   LPC_EMAC->MCFG |= MCFG_RESET_MII_MGMT;
   LPC_EMAC->MCFG &= ~MCFG_RESET_MII_MGMT;

   //PHY transceiver initialization
   error = interface->phyDriver->init(interface);
   //Failed to initialize PHY transceiver?
   if(error) return error;

   //Initialize TX and RX descriptor arrays
   lpc176xEthInitDesc(interface);

   //Set the MAC address
   LPC_EMAC->SA0 = interface->macAddr.w[2];
   LPC_EMAC->SA1 = interface->macAddr.w[1];
   LPC_EMAC->SA2 = interface->macAddr.w[0];

   //Initialize hash table
   LPC_EMAC->HashFilterL = 0;
   LPC_EMAC->HashFilterH = 0;

   //Configure the receive filter
   LPC_EMAC->RxFilterCtrl = RFC_ACCEPT_PERFECT_EN |
      RFC_ACCEPT_MULTICAST_HASH_EN | RFC_ACCEPT_BROADCAST_EN;

   //Program the MAXF register with the maximum frame length to be accepted
   LPC_EMAC->MAXF = 1518;

   //Reset EMAC interrupt flags
   LPC_EMAC->IntClear  = 0xFFFF;
   //Enable desired EMAC interrupts
   LPC_EMAC->IntEnable = INT_TX_DONE | INT_RX_DONE;

   //Set priority grouping (5 bits for pre-emption priority, no bits for subpriority)
   NVIC_SetPriorityGrouping(LPC176X_ETH_IRQ_PRIORITY_GROUPING);

   //Configure Ethernet interrupt priority
   NVIC_SetPriority(ENET_IRQn, NVIC_EncodePriority(LPC176X_ETH_IRQ_PRIORITY_GROUPING,
      LPC176X_ETH_IRQ_GROUP_PRIORITY, LPC176X_ETH_IRQ_SUB_PRIORITY));

   //Enable transmission and reception
   LPC_EMAC->Command |= COMMAND_TX_ENABLE | COMMAND_RX_ENABLE;
   //Allow frames to be received
   LPC_EMAC->MAC1 |= MAC1_RECEIVE_ENABLE;

   //Force the TCP/IP stack to check the link state
   osSetEvent(&interface->nicRxEvent);
   //LPC176x Ethernet MAC is now ready to send
   osSetEvent(&interface->nicTxEvent);

   //Successful initialization
   return __NO_ERROR;
}

void lpc176xEthInitGpio(NetInterface *interface)
{
   //Configure P1.0 (ENET_TXD0), P1.1 (ENET_TXD1), P1.4 (ENET_TX_EN), P1.8 (ENET_CRS),
   //P1.9 (ENET_RXD0), P1.10 (ENET_RXD1), P1.14 (RX_ER) and P1.15 (ENET_REF_CLK)
   LPC_PINCON->PINSEL2 &= ~(PINSEL2_P1_0_MASK | PINSEL2_P1_1_MASK |
      PINSEL2_P1_4_MASK | PINSEL2_P1_8_MASK | PINSEL2_P1_9_MASK |
      PINSEL2_P1_10_MASK | PINSEL2_P1_14_MASK | PINSEL2_P1_15_MASK);

   LPC_PINCON->PINSEL2 |= PINSEL2_P1_0_ENET_TXD0 | PINSEL2_P1_1_ENET_TXD1 |
      PINSEL2_P1_4_ENET_TX_EN | PINSEL2_P1_8_ENET_CRS | PINSEL2_P1_9_ENET_RXD0 |
      PINSEL2_P1_10_ENET_RXD1 | PINSEL2_P1_14_ENET_RX_ER | PINSEL2_P1_15_ENET_REF_CLK;

   //Configure P1.16 (ENET_MDC) and P1.17 (ENET_MDIO)
   LPC_PINCON->PINSEL3 &= ~(PINSEL3_P1_16_MASK | PINSEL3_P1_17_MASK);
   LPC_PINCON->PINSEL3 |= PINSEL3_P1_16_ENET_MDC | PINSEL3_P1_17_ENET_MDIO;
}

void lpc176xEthEnableIrq(NetInterface *interface)
{
   //Enable Ethernet MAC interrupts
   NVIC_EnableIRQ(ENET_IRQn);
   //Enable Ethernet PHY interrupts
   interface->phyDriver->enableIrq(interface);
}

void lpc176xEthDisableIrq(NetInterface *interface)
{
   //Disable Ethernet MAC interrupts
   NVIC_DisableIRQ(ENET_IRQn);
   //Disable Ethernet PHY interrupts
   interface->phyDriver->disableIrq(interface);
}

void lpc176xEthEventHandler(NetInterface *interface)
{
   error_t error;
   uint_t length;
   bool_t linkStateChange;

   //PHY event is pending?
   if(interface->phyEvent)
   {
      //Acknowledge the event by clearing the flag
      interface->phyEvent = FALSE;
      //Handle PHY specific events
      linkStateChange = interface->phyDriver->eventHandler(interface);

      //Check whether the link state has changed?
      if(linkStateChange)
      {
         //Set speed and duplex mode for proper operation
         if(interface->linkState)
         {
            //10BASE-T or 100BASE-TX operation mode?
            if(interface->speed100)
               LPC_EMAC->SUPP = SUPP_SPEED;
            else
               LPC_EMAC->SUPP = 0;

            //Half-duplex or full-duplex mode?
            if(interface->fullDuplex)
            {
               //The MAC operates in full-duplex mode
               LPC_EMAC->MAC2 |= MAC2_FULL_DUPLEX;
               LPC_EMAC->Command |= COMMAND_FULL_DUPLEX;
               //Configure Back-to-Back Inter-Packet Gap
               LPC_EMAC->IPGT = IPGT_FULL_DUPLEX;
            }
            else
            {
               //The MAC operates in half-duplex mode
               LPC_EMAC->MAC2 &= ~MAC2_FULL_DUPLEX;
               LPC_EMAC->Command &= ~COMMAND_FULL_DUPLEX;
               //Configure Back-to-Back Inter-Packet Gap
               LPC_EMAC->IPGT = IPGT_HALF_DUPLEX;
            }
         }

         //Process link state change event
         nicNotifyLinkChange(interface);
      }
   }

   //Packet received?
   if(LPC_EMAC->IntStatus & INT_RX_DONE)
   {
      //Clear RxDone interrupt flag
      LPC_EMAC->IntClear = INT_RX_DONE;

      //Process all pending packets
      do
      {
         //Read incoming packet
         error = lpc176xEthReceivePacket(interface,
            interface->ethFrame, ETH_MAX_FRAME_SIZE, &length);

         //Check whether a valid packet has been received
         if(!error)
         {
            //Pass the packet to the upper layer
            nicProcessPacket(interface, interface->ethFrame, length);
         }

         //No more data in the receive buffer?
      } while(error != __ERROR_BUFFER_EMPTY);
   }

   //Re-enable TxDone and RxDone interrupts
   LPC_EMAC->IntEnable = INT_TX_DONE | INT_RX_DONE;
}

error_t lpc176xEthSetMacFilter(NetInterface *interface)
{
   uint_t i;
   uint_t k;
   uint32_t crc;
   uint32_t hashTable[2];

   //Debug message
   TRACE_INFO("Updating LPC176x hash table...\r\n");

   //Clear hash table
   hashTable[0] = 0;
   hashTable[1] = 0;

   //The MAC filter table contains the multicast MAC addresses
   //to accept when receiving an Ethernet frame
   for(i = 0; i < interface->macFilterSize; i++)
   {
      //Compute CRC over the current MAC address
      crc = lpc176xEthCalcCrc(&interface->macFilter[i].addr, sizeof(MacAddr));
      //Bits [28:23] are used to form the hash
      k = (crc >> 23) & 0x3F;
      //Update hash table contents
      hashTable[k / 32] |= (1 << (k % 32));
   }

   //Write the hash table
   LPC_EMAC->HashFilterL = hashTable[0];
   LPC_EMAC->HashFilterH = hashTable[1];

   //Debug message
   TRACE_INFO("  HashFilterL = %08" PRIX32 "\r\n", LPC_EMAC->HashFilterL);
   TRACE_INFO("  HashFilterH = %08" PRIX32 "\r\n", LPC_EMAC->HashFilterH);

   //Successful processing
   return __NO_ERROR;
}

error_t lpc176xEthSendPacket(NetInterface *interface,
   const ChunkedBuffer *buffer, size_t offset)
{
   uint_t i;
   uint_t j;

   //Retrieve the length of the packet
   size_t length = chunkedBufferGetLength(buffer) - offset;

   //Check the frame length
   if(!length)
   {
      //The transmitter can accept another packet
      osSetEvent(&interface->nicTxEvent);
      //We are done since the buffer is empty
      return __NO_ERROR;
   }
   else if(length > LPC176X_ETH_TX_BUFFER_SIZE)
   {
      //The transmitter can accept another packet
      osSetEvent(&interface->nicTxEvent);
      //Report an error
      return __ERROR_INVALID_LENGTH;
   }

   //Get the index of the current descriptor
   i = LPC_EMAC->TxProduceIndex;
   //Get the index of the next descriptor
   j = i + 1;
   //Wrap around if necessary
   if(j >= LPC176X_ETH_TX_BUFFER_COUNT) j = 0;

   //Check whether the transmit descriptor array is full
   if(j == LPC_EMAC->TxConsumeIndex)
      return __ERROR_FAILURE;

   //Copy user data to the transmit buffer
   chunkedBufferRead((uint8_t *) txDesc[i].packet, buffer, offset, length);

   //Write the transmit control word
   txDesc[i].control = TX_CTRL_INTERRUPT | TX_CTRL_LAST |
      TX_CTRL_CRC | TX_CTRL_PAD | ((length - 1) & TX_CTRL_SIZE);

   //Increment index and wrap around if necessary
   if(++i >= LPC176X_ETH_TX_BUFFER_COUNT) i = 0;
   //Save the resulting value
   LPC_EMAC->TxProduceIndex = i;

   //Get the index of the next descriptor
   j = i + 1;
   //Wrap around if necessary
   if(j >= LPC176X_ETH_TX_BUFFER_COUNT) j = 0;

   //Check whether the next buffer is available for writing
   if(j != LPC_EMAC->TxConsumeIndex)
   {
      //The transmitter can accept another packet
      osSetEvent(&interface->nicTxEvent);
   }

   //Successful write operation
   return __NO_ERROR;
}

error_t lpc176xEthReceivePacket(NetInterface *interface,
   uint8_t *buffer, size_t size, size_t *length)
{
   error_t error;
   size_t n;
   uint_t i;

   //Point to the current descriptor
   i = LPC_EMAC->RxConsumeIndex;

   //Make sure the current buffer is available for reading
   if(i != LPC_EMAC->RxProduceIndex)
   {
      //Retrieve the length of the frame
      n = (rxStatus[i].info & RX_STATUS_SIZE) + 1;
      //Limit the number of data to read
      n = MIN(n, size);

      //Copy data from receive buffer
      memcpy(buffer, (uint8_t *) rxDesc[i].packet, n);

      //Increment index and wrap around if necessary
      if(++i >= LPC176X_ETH_RX_BUFFER_COUNT) i = 0;
      //Save the resulting value
      LPC_EMAC->RxConsumeIndex = i;

      //Total number of bytes that have been received
      *length = n;
      //Packet successfully received
      error = __NO_ERROR;
   }
   else
   {
      //No more data in the receive buffer
      error = __ERROR_BUFFER_EMPTY;
   }

   //Return status code
   return error;
}

void lpc176xEthWritePhyReg(uint8_t phyAddr, uint8_t regAddr, uint16_t data)
{
   //Clear MCMD register
   LPC_EMAC->MCMD = 0;

   //PHY address
   LPC_EMAC->MADR = (phyAddr << 8) & MADR_PHY_ADDRESS;
   //Register address
   LPC_EMAC->MADR |= regAddr & MADR_REGISTER_ADDRESS;
   //Data to be written in the PHY register
   LPC_EMAC->MWTD = data & MWTD_WRITE_DATA;

   //Wait for the write to complete
   while(LPC_EMAC->MIND & MIND_BUSY);
}

uint16_t lpc176xEthReadPhyReg(uint8_t phyAddr, uint8_t regAddr)
{
   //PHY address
   LPC_EMAC->MADR = (phyAddr << 8) & MADR_PHY_ADDRESS;
   //Register address
   LPC_EMAC->MADR |= regAddr & MADR_REGISTER_ADDRESS;

   //Start a read operation
   LPC_EMAC->MCMD = MCMD_READ;
   //Wait for the read to complete
   while(LPC_EMAC->MIND & MIND_BUSY);
   //Clear MCMD register
   LPC_EMAC->MCMD = 0;

   //Return PHY register contents
   return LPC_EMAC->MRDD & MRDD_READ_DATA;
}
